--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,26 @@
 version: '3'
 
 services:
-  datascience-environment:
-    #image: gnasello/datascience-env:20221128
-    image: gnasello/datascience-env:20230105.1
+  datascience-env:
+    build:
+      context: .
+      dockerfile: Dockerfile_usertemplate
+      args:
+        RES_UID: ${RES_UID:-0}
+        RES_GID: ${RES_GID:-0}
     ports:
-      - 7777:7777
+      - $JLPORT:$JLPORT
+      - $RSPORT:7878
     volumes:
-      - /home/luna.kuleuven.be/u0128401:/home/researcher # change the path before ":" with the volume you want to mount
+      - $HOME_RESEARCHER:/home/researcher # change the path before ":" with the volume you want to mount
     working_dir: /home/researcher
-    container_name: datascience-u0128401
-    #entrypoint: /usr/bin/bash
-    entrypoint: bash /launch_jupyterlab.sh -p 7777
-    user: root
-    #stdin_open: true # to have an interactive shell with the docker-compose setup
-    #tty: true # to have an interactive shell with the docker-compose setup
+    container_name: $COMPOSE_PROJECT_NAME
+    entrypoint: bash /entrypoint.sh
+    hostname: $HOST_NAME
+    environment:
+       - JLPORT=${JLPORT}
+       - RSPORT=${RSPORT}
+       - USER_RESEARCHER=${USER_RESEARCHER}
+       - COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME}
+       - HOST_NAME=${HOST_NAME}
+       - HOME_RESEARCHER=${HOME_RESEARCHER}
