--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  datascience-env:
+  datascience:
     build:
       context: .
       dockerfile: Dockerfile_usertemplate
