--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,25 +2,16 @@ version: '3'
 
 services:
   datascience:
-    build:
-      context: .
-      dockerfile: Dockerfile_usertemplate
-      args:
-        RES_UID: ${RES_UID:-0}
-        RES_GID: ${RES_GID:-0}
+    image: gnasello/datascience-env:2023-01-19
+    build: .
     ports:
       - $JLPORT:$JLPORT
       - $RSPORT:7878
     volumes:
       - $HOME_RESEARCHER:/home/researcher # change the path before ":" with the volume you want to mount
     working_dir: /home/researcher
-    container_name: $COMPOSE_PROJECT_NAME
     entrypoint: bash /entrypoint.sh
-    hostname: $HOST_NAME
     environment:
        - JLPORT=${JLPORT}
        - RSPORT=${RSPORT}
-       - USER_RESEARCHER=${USER_RESEARCHER}
-       - COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME}
-       - HOST_NAME=${HOST_NAME}
        - HOME_RESEARCHER=${HOME_RESEARCHER}
