--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,10 @@ services:
       - $HOME_RESEARCHER:/home/researcher # change the path before ":" with the volume you want to mount
     working_dir: /home/researcher
     entrypoint: bash /entrypoint.sh
+    hostname: $HOST_NAME
+    user: root
     environment:
        - JLPORT=${JLPORT}
        - RSPORT=${RSPORT}
        - HOME_RESEARCHER=${HOME_RESEARCHER}
+       - HOST_NAME=${HOST_NAME}
