switch to linuxserver

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,19 @@
-version: '3'
-
+---
+version: "3"
 services:
-  datascience:
-    image: gnasello/datascience-env:2023-07-16
+  linuxserver:
+    image: gnasello/datascience-env:latest
+    container_name: webtop
+    security_opt:
+      - seccomp:unconfined # for terminal to work
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      #- SUBFOLDER=/ #optional
+      - TITLE=linuxserver #optional
     ports:
-      - 8888:8888
+      - 3000:3000
+    #devices:
+      #- /dev/dri:/dev/dri #optional
+    shm_size: "1gb" #optional
