switch to jupyter/r-notebook

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,15 @@
 version: "3"
 services:
   datascience:
-    image: gnasello/datascience-env:2023-10-17
-    container_name: webtop
-    security_opt:
-      - seccomp:unconfined # for terminal to work
+    image: gnasello/datascience-env:2023-12-19
+    container_name: datascience-env
+    user: root
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-      #- SUBFOLDER=/ #optional
-      - TITLE=linuxserver #optional
+    - NB_USER=researcher
+    - NB_UID=1234
+    - NB_GID=1234
+    - CHOWN_HOME=yes
+    - CHOWN_HOME_OPTS=-R
+    - GRANT_SUDO=yes
     ports:
-      - 3000:3000
-    #devices:
-      #- /dev/dri:/dev/dri #optional
-    shm_size: "1gb" #optional
+      - 8888:8888
