--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,14 @@
----
-version: "3"
 services:
   datascience:
-    image: gnasello/datascience-env:2024-06-12
+    image: gnasello/datascience-env:2024-06-12_arm64
     container_name: datascience-env
     user: root
+    ports:
+      - 8888:8888
     environment:
-    - NB_UID=1234
-    - NB_GID=1234
+    #- NB_UID={NB_UID}
+    #- NB_GID={NB_GID}
     - CHOWN_HOME=yes
     - CHOWN_HOME_OPTS=-R
     - GRANT_SUDO=yes
-    ports:
-      - 8888:8888
+    #- JUPYTER_PORT=8888
