--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   datascience:
-    image: gnasello/datascience-env:2025-09-17-amd64
+    image: gnasello/datascience-env:2025-09-18
     container_name: datascience-env
     user: root
     ports:
